[metadata]
name = swgts-api
description = Upload sequences, and filter human reads to preserve privacy
author = HHU - Algorithmic Bioinformatics
author_email = albi@hhu.de

[options]
python_requires = >=3.9
install_requires =
    biopython~=1.81
    Flask~=2.3.2
    redis~=4.6.0
packages =
    server
include_package_data = True
