[metadata]
name = swgts-filter
description = Upload sequences, and filter human reads to preserve privacy
author = HHU - Algorithmic Bioinformatics
author_email = albi@hhu.de

[options]
python_requires = >=3.9
install_requires =
    biopython~=1.81
    mappy~=2.26
    redis~=4.6.0
    rq~=1.15.1
packages =
    filter
    benchmark
include_package_data = True
