[project]
name = "swgts_api"
version = "0.0.0"
description = "Upload sequences, and filter human reads to preserve privacy" 
authors = [{name = "HHU - Algorithmic Bioinformatics", email = "albi@hhu.de"}]
requires-python = ">= 3.9"
dependencies = ["Flask~=2.3.2", "redis~=4.6.0"]

[build-system]
requires = ["setuptools >= 69"]
build-backend = "setuptools.build_meta"
